- using "TOXIKK Server" as firewall rule name to avoid conflicts with rules generated by starting the client or SDKK
- create desktop shortcut for MyServerConfig.ini
- using 2 services to detect external IP as failsafe
- added maps BL-Cube,BL-Dedale and CC-Citadel to default config
- removed ExtVoting mutator from default config (it's now part of the official build 0.95)

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -55,6 +55,7 @@ Item=601961102 ;CC-Bloxeh
 Item=601904093 ;CC-Sprinta
 Item=627357504 ;CC-wOOtabolous
 Item=611201059 ;BL-FusionKKore
+Item=683852119 ;BL-Dedale
 Item=622177613 ;BL-Grendelkeep
 Item=609552489 ;BL-Campgrounds
 Item=663763892 ;BL-TheEdge
@@ -67,7 +68,7 @@ Item=655952794 ;CC-FacingWorlds
 Item=667216025 ;TeamArena
 
 ; mutators
-Item=672299305 ;Server Utils 1 (ExtVoting, QuickVoting, ...)
+Item=672299305 ;Server Utils 1 (QuickVoting, ServerIdle, ...)
 Item=603855831 ;MutatH0r pack
 Item=601819301 ;Railgun
 Item=621419323 ;Toxikk Ads
@@ -82,10 +83,10 @@ Item=640818019 ;Q3Doomguys
 
 [MapList]
 ; Don't use any maps that you don't have installed... it would crash the server when they get voted!
-@BLMaps@=BL-Foundation,BL-Artifact,BL-Ganesha,BL-Dekk,AD-Castello
-@BLMaps@=@BLMaps@,BL-FusionKKore,BL-Grendelkeep,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10,BL-MAP07Doom,BL-MAP32DoomCensored,BL-Rankin_V1,BL-Defiance_Shell_V1
+@BLMaps@=BL-Foundation,BL-Artifact,BL-Ganesha,BL-Dekk,AD-Castello,BL-Cube
+@BLMaps@=@BLMaps@,BL-FusionKKore,BL-Dedale,BL-Grendelkeep,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10,BL-MAP07Doom,BL-MAP32DoomCensored,BL-Rankin_V1,BL-Defiance_Shell_V1
 
-@CCMaps@=CC-Artifact_XL,CC-Foundation_XL,CC-Twin_Peaks
+@CCMaps@=CC-Artifact_XL,CC-Foundation_XL,CC-Twin_Peaks,CC-Citadel
 @CCMaps@=@CCMaps@,CC-Novus,CC-Salem_beta1a,CC-FacingWorlds,CC-Sprinta,CC-Bloxeh,CC-wootabolous
 
 @ADMaps@=BL-Artifact,CC-Artifact_XL,AD-Castello,BL-Dekk,BL-Foundation,CC-Foundation_XL,BL-Ganesha,CC-Twin_Peaks
@@ -117,7 +118,7 @@ DefaultEngine.ini\IpDrv.HTTPDownload\UseCompression=False
 DefaultGame.ini\UTGame.UTGame\bWaitForNetPlayers=false
 DefaultGame.ini\Cruzade.CRZGame\NetWait=10
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=Difficulty,GoalScore,LoadoutFlags,DrawDamageRadius,Roq3tPreset,Roq3tMutate,SuperRayPreset,SuperRayMutate
-Mutators+=MutatH0r.CRZMutator_TickRate,QuickVoting.CommonVotes,ExtVoting.EVMut,MutatH0r.CRZMutator_SaveShaderCache,ServerIdle.ServerIdle
+Mutators+=MutatH0r.CRZMutator_TickRate,QuickVoting.CommonVotes,MutatH0r.CRZMutator_SaveShaderCache,ServerIdle.ServerIdle
 
 [BL-Defaults]
 ; shared settings for Bloodlust, SquadAssault and TeamArena which are imported in various [DedicatedServer...] sections
