- changed HTTP redirect port to 8800
- installing cached shader map including custom maps:
  FusionKKore,Dedale,Grendelkeep,Campgrounds,Edge,Hiata4,GermanAlps,Map07Doom,Map32DoomCensored,Rankin,Defiant,
  Novus,FacingWorlds,Sprinta,Bloxeh,Wootabolous
- enabled all callvotes

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -117,8 +117,15 @@ DefaultEngine.ini\IpDrv.HTTPDownload\RedirectToURL=@HttpRedirectUrl@
 DefaultEngine.ini\IpDrv.HTTPDownload\UseCompression=False
 DefaultGame.ini\UTGame.UTGame\bWaitForNetPlayers=false
 DefaultGame.ini\Cruzade.CRZGame\NetWait=10
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bAddTime=True
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bEndTimer=True
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bEndMap=True
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bKick=True
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bKillBots=True
+UDKQuickVoting.ini\QuickVoting.CommonVotes\bAddBots=True
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=Difficulty,GoalScore,LoadoutFlags,DrawDamageRadius,Roq3tPreset,Roq3tMutate,SuperRayPreset,SuperRayMutate
 Mutators+=MutatH0r.CRZMutator_TickRate,QuickVoting.CommonVotes,MutatH0r.CRZMutator_SaveShaderCache,ServerIdle.ServerIdle
+@CmdLine+=-seekfreeloading
 
 [BL-Defaults]
 ; shared settings for Bloodlust, SquadAssault and TeamArena which are imported in various [DedicatedServer...] sections
