- replaced winsw-1.18 with a custom build that uses .net 4.0.  (A default Windows 2012R2 server doesn't have .NET 2.0 installed)
- added latest version of ToxikkServerLauncher which by default calls toxikk.exe with -seekfreeloading option

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -4,8 +4,7 @@
 ; - edit [Defaults] to use static or dynamic GamePort and QueryPort and whether you want a welcome message (@Import=Motd)
 ; - edit [Motd] with your custom Welcome message
 ;
-; Documentation about this file can be found on https://github.com/ToxikkModdingTeam/ToxikkServerLauncher
-; The latest version of the Toxikk Server Launcher can be found on https://github.com/PredatH0r/ToxikkServerLauncher/releases
+; Documentation about how this file works can be found on https://github.com/ToxikkModdingTeam/ToxikkServerLauncher
 
 
 [ServerLauncher]
@@ -125,7 +124,6 @@ UDKQuickVoting.ini\QuickVoting.CommonVotes\bKillBots=True
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bAddBots=True
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=Difficulty,GoalScore,LoadoutFlags,DrawDamageRadius,Roq3tPreset,Roq3tMutate,SuperRayPreset,SuperRayMutate
 Mutators+=MutatH0r.CRZMutator_TickRate,QuickVoting.CommonVotes,MutatH0r.CRZMutator_SaveShaderCache,ServerIdle.ServerIdle
-@CmdLine+=-seekfreeloading
 
 [BL-Defaults]
 ; shared settings for Bloodlust, SquadAssault and TeamArena which are imported in various [DedicatedServer...] sections
