--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -110,12 +110,10 @@ Difficulty=@skillclass,6
 MinSkillClass=
 MaxSkillClass=
 DefaultEngine.ini\IpDrv.TcpNetDriver\AllowDownloads=True
-DefaultEngine.ini\IpDrv.TcpNetDriver\MaxClientRate=1000000
-DefaultEngine.ini\IpDrv.TcpNetDriver\MaxInternetClientRate=1000000
 DefaultEngine.ini\IpDrv.HTTPDownload\RedirectToURL=@HttpRedirectUrl@
 DefaultEngine.ini\IpDrv.HTTPDownload\UseCompression=False
-DefaultGame.ini\UTGame.UTGame\bWaitForNetPlayers=false
-DefaultGame.ini\Cruzade.CRZGame\NetWait=10
+DefaultGame.ini\UTGame.UTGame\bWaitForNetPlayers=True
+DefaultGame.ini\Cruzade.CRZGame\NetWait=5
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bAddTime=True
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bEndTimer=True
 UDKQuickVoting.ini\QuickVoting.CommonVotes\bEndMap=True
@@ -176,45 +174,65 @@ UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorDecayAmount=1
 UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorDecayLimit=100
 
 [PlayerModels]
-; add "PlayerModels" to the @Import list if you want to support custom player models on a server
-; this is still experimental. If your server doesn't start properly, remove @Import=PlayerModels from your configuration
+; add "@Import=PlayerModels" to your [DedicatedServerX] config f you want to enable custom player models
+; Players will auto-download all the models that are installed on the server, no matter if they are used or not
 @Copy=@WorkshopDir@\626730010\UDKCustomPlayers.ini
 Mutators*=CustomPlayers.CRZMutator_CustomPlayers
 UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bShowReminder=false
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bDisableVoices=true
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bNoForceLoad=true
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\ForceRefs+=PM_DukeNukem.VP.duke_dodge_cue
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\ForceRefs+=PM_Homer.homer_dodge_cue
-UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\ForceRefs+=PM_RepCommando.VP.boss_dodge_cue
+CustomPlayers!=
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank1Red",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank2Red",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank3Red",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank4Red",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank1Blue",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank2Blue",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank3Blue",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Rank4Blue",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_Bones",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_HK47Char",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_DAR",DownloadURL="")
+CustomPlayers+=(PlayerClass="CustomPlayers.PI_DARGreen",DownloadURL="")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_White",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_ARC",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_07Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_38Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_40Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
 CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_62Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="TronAnon.PI_TronAnon",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DankNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Beach",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Duck",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Merica",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Skull",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Tie",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Toxikk",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_XMas",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
 CustomPlayers+=(PlayerClass="HomerSimpson.PI_HomerSimpson",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=639972958")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Beach",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Duck",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Merica",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Skull",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Tie",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Toxikk",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_XMas",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DankNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="TronAnon.PI_TronAnon",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_M",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_MSarge",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_S",DownloadURL="")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doomguy",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3DoomStatue",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3DoomPhobos",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom1Stat",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom2Stat",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doom3Stat",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=640818019")
+
 
 ;===============================================================================================
 
 [DedicatedServer1]
 @ServerName=All game modes
 @Import=CC-Defaults,BL-Defaults
-@GameModes@=TeamArena.TAGame,Cruzade.CRZTeamGame,Cruzade.CRZBloodlust
-GameProfiles:=
-GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options=,Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
-GameProfiles+=@Loop {@BLMaps@}{@GameModes@}:(MapName="@1@",GameClass="@2@",Options=,Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
-GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameClass="@2@",Options=,Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
-GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameClass="@2@",Options=,Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+@GameModes@=Team Arena|TeamArena.TAGame|4,Squad Assault|Cruzade.CRZTeamGame|8,Bloodlust|Cruzade.CRZBloodlust|4
+DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=NumPlay,Difficulty,GoalScore
+GameProfiles!=
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?NumPlay=4?Difficulty=3",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
+GameProfiles+=@Loop {@BLMaps@}{@GameModes@}:(MapName="@1@",GameName="@2.1@",GameClass="@2.2@",Options="?NumPlay=@2.3@",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 Map=BL-Artifact
 GoalScore=20
 Mutators*=MutatH0r.CRZMutator_DmgPlume
@@ -223,7 +241,7 @@ Mutators*=MutatH0r.CRZMutator_DmgPlume
 @ServerName=Bloodlust only
 @Import=BL-Defaults
 @GameModes@=Cruzade.CRZBloodlust
-GameProfiles:=
+GameProfiles!=
 GameProfiles+=@Loop {@BLMaps@}{@GameModes@}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
 Map=BL-Artifact
 Mutators*=MutatH0r.CRZMutator_DmgPlume
@@ -238,8 +256,8 @@ Mutators*=Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth
 [DedicatedServer4]
 @ServerName=Bloodlust+Instagib
 @Import=BL-Defaults
-GameProfiles:=
-GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options=,Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
+GameProfiles!=
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?Difficulty=2",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
 GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
 Map=BL-Artifact
 Mutators*=MutatH0r.CRZMutator_DmgPlume
@@ -247,7 +265,7 @@ Mutators*=MutatH0r.CRZMutator_DmgPlume
 [DedicatedServer5]
 @ServerName=Team Games only (SA, CC, AD, TA)
 @Import=BL-Default,CC-Defaults
-GameProfiles:=
+GameProfiles!=
 GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
 GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
 Map=CC-Twin_Peaks
@@ -257,7 +275,7 @@ Mutators*=MutatH0r.CRZMutator_DmgPlume
 @ServerName=NoobFriendly BL,SA
 @Import=BL-Defaults,HealthArmorDecay
 @GameModes@=Cruzade.CRZTeamGame,Cruzade.CRZBloodlust
-GameProfiles:=
+GameProfiles!=
 GameProfiles+=@Loop {@BLMaps@}{@GameModes@}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
 Map=BL-Foundation
 Difficulty=@skillclass,4
