--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -42,6 +42,8 @@ http {
 		
         location /toxikkredirect {
 			autoindex on;
+			#limit_rate_after 1m;
+			#limit_rate 250k;
         }		
     }
 	
