- updated to ToxikkServerLauncher 2.22
- steam password is no longer prompted and saved during install

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -57,9 +57,8 @@ GameProfiles=DefaultMapList.ini\Cruzade.CRZVoteManager\GameProfiles
 
 
 [SteamWorkshop]
-; settings for downloading steam workshop items. anonymous works for most items, but some may fail.
+; Steam login user name ("anonymous" does not work anymore because of bugs added to steamcmd.exe)
 User=anonymous
-Password=anonymous
 
 ;Maps
 Item=601961102 ;CC-Bloxeh
