--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -58,7 +58,9 @@ GameProfiles=DefaultMapList.ini\Cruzade.CRZVoteManager\GameProfiles
 
 [SteamWorkshop]
 ; Steam login user name ("anonymous" does not work anymore because of bugs added to steamcmd.exe)
+; Password here is optional. If it is left blank, you will be prompted on-demand by steamcmd
 User=anonymous
+Password=
 
 ;Maps
 Item=601961102 ;CC-Bloxeh
@@ -76,6 +78,8 @@ Item=647730220 ;CC-Novus
 Item=655952794 ;CC-FacingWorlds
 Item=728197710 ;BL-Map30Doom (Icon Of Sin)
 Item=739422820 ;BL-AkroneAlpha
+Item=744380978 ;BL-MoovAlpha
+Item=http://toxikk.beham.biz/workshop/LongestYard.zip ;BL-LongestYard
 Item=http://toxikk.beham.biz/workshop/Defiance.zip ;BL-Defiance
 Item=http://toxikk.beham.biz/workshop/Rankin.zip ;BL-Rankin
 Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem
@@ -126,11 +130,11 @@ Item=http://toxikk.beham.biz/workshop/HoloGirls.zip
 [MapList]
 ; Don't put any maps in this list which you don't have installed... when users vote for a missing map, the server will crash!
 @BLMaps_Stock@=BL-Foundation,BL-Artifact,BL-Ganesha,BL-Dekk,AD-Castello,BL-Cube
-@BLMaps@=@BLMaps_Stock@,BL-FusionKKore,BL-Dedale,BL-Grendelkeep,BL-AkroneAlpha,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10
+@BLMaps@=@BLMaps_Stock@,BL-FusionKKore,BL-Dedale,BL-LongestYard,BL-Grendelkeep,BL-AkroneAlpha,BL-MoovAlpha,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10
 @BLMaps@=@BLMaps@,BL-MAP07Doom,BL-MAP30Doom,BL-MAP32DoomCensored
 @BLMaps@=@BLMaps@,BL-Rankin_V1,BL-Defiance_Shell_V1
 
-@CCMaps_Stock@=CC-Twin_Peaks,CC-Foundation_XL,CC-Artifact_XL,CC-Citadel
+@CCMaps_Stock@=CC-Twin_Peaks,CC-Foundation_XL,CC-Artifact_XL,CC-Citadel,CC-Ehrgeiz
 @CCMaps@=@CCMaps_Stock@,CC-Novus,CC-Hiata4_XL,CC-FacingWorlds,CC-Sprinta,CC-Bloxeh,CC-wootabolous
 ;@CCMaps@=@CCMaps@,CC-Salem_beta1a
 
