--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -79,12 +79,13 @@ Item=655952794 ;CC-FacingWorlds
 Item=728197710 ;BL-Map30Doom (Icon Of Sin)
 Item=739422820 ;BL-AkroneAlpha
 Item=744380978 ;BL-MoovAlpha
-Item=http://toxikk.beham.biz/workshop/LongestYard.zip ;BL-LongestYard
+Item=754310974 ;BL-LongestYard
+Item=755189075 ;BL-Eternity
 Item=http://toxikk.beham.biz/workshop/Defiance.zip ;BL-Defiance
 Item=http://toxikk.beham.biz/workshop/Rankin.zip ;BL-Rankin
-Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem
 Item=http://toxikk.beham.biz/workshop/Map07Doom.zip ;BL-Map07Doom (Dead Simple)
 Item=http://toxikk.beham.biz/workshop/Map32Doom.zip ;BL-Map32Doom (Grosse Censored)
+Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem (glitchy when alt-tabbing)
 
 ; Weapons
 Item=698385286 ;Calico M950 Pistol (replaces Violator)
@@ -130,7 +131,7 @@ Item=http://toxikk.beham.biz/workshop/HoloGirls.zip
 [MapList]
 ; Don't put any maps in this list which you don't have installed... when users vote for a missing map, the server will crash!
 @BLMaps_Stock@=BL-Foundation,BL-Artifact,BL-Ganesha,BL-Dekk,AD-Castello,BL-Cube
-@BLMaps@=@BLMaps_Stock@,BL-FusionKKore,BL-Dedale,BL-LongestYard,BL-Grendelkeep,BL-AkroneAlpha,BL-MoovAlpha,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10
+@BLMaps@=@BLMaps_Stock@,BL-FusionKKore,BL-Dedale,BL-LongestYard,BL-Grendelkeep,BL-Eternity,BL-AkroneAlpha,BL-MoovAlpha,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10
 @BLMaps@=@BLMaps@,BL-MAP07Doom,BL-MAP30Doom,BL-MAP32DoomCensored
 @BLMaps@=@BLMaps@,BL-Rankin_V1,BL-Defiance_Shell_V1
 
