- updated custom map shader cache for TOXIKK v1.0
- updated config file to changes in TOXIKK v1.0
- latest server launcher

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -53,7 +53,7 @@ CustomPlayers=UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\Custom
 WelcomeHeader=UDKMutatH0r.ini\MutatH0r.CRZMutator_Motd\WelcomeHeader
 WelcomeMessage=UDKMutatH0r.ini\MutatH0r.CRZMutator_Motd\WelcomeMessage
 BannedSteamIds=DefaultGame.ini\Cruzade.CRZAccessControl\BannedSteamIds
-GameProfiles=DefaultMapList.ini\Cruzade.CRZVoteManager\GameProfiles
+GameProfiles=DefaultMapList.ini\Cruzade.CRZVoteManager\GameVoteProfiles
 
 
 [SteamWorkshop]
@@ -88,6 +88,7 @@ Item=http://toxikk.beham.biz/workshop/Map32Doom.zip ;BL-Map32Doom (Grosse Censor
 Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem (glitchy when alt-tabbing)
 
 ; Weapons
+Item=601819301 ;Railgun (piercing Stingray beam)
 Item=698385286 ;Calico M950 Pistol (replaces Violator)
 Item=702872610 ;KF2 Double Barrel Shotgun (aka Boomstick)
 Item=728142135 ;Quake 3 Weapon Overhaul
@@ -103,7 +104,6 @@ Item=667216025 ;TeamArena
 Item=672299305 ;Server Utils 1 (QuickVoting, ServerIdle, AdminPlus)
 Item=603855831 ;MutatH0r pack
 Item=713969489 ;Custom Music
-Item=601819301 ;Railgun
 Item=621419323 ;Toxikk Ads
 
 ; Player Models
@@ -298,13 +298,14 @@ CustomPlayers+=(PlayerClass="UTCathode.PI_Cathode",DownloadURL="http://steamcomm
 [DedicatedServer1]
 ; Votable between BL, Instagib, SA, TA, CC and AD game types
 ; MaxPlayers is set through BL-Defaults, so that no players have to leave when switching maps from CC to BL
-@ServerName=All game modes
+ServerName=All game modes
 @Import=CC-Defaults,BL-Defaults
-@GameModes@=Team Arena|TeamArena.TAGame|4,Squad Assault|Cruzade.CRZTeamGame|8,Bloodlust|Cruzade.CRZBloodlust|4
 DefaultMapList.ini\Cruzade.CRZVoteManager\AutoEmptyOptions=NumPlay,Difficulty,GoalScore
 GameProfiles!=
-GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?NumPlay=4?Difficulty=3",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
-GameProfiles+=@Loop {@BLMaps@}{@GameModes@}:(MapName="@1@",GameName="@2.1@",GameClass="@2.2@",Options="?NumPlay=@2.3@",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Bloodlust",GameClass="@2@",Options="?NumPlay=6",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZBloodlust}:(MapName="@1@",GameName="Instagib",GameClass="@2@",Options="?NumPlay=6?Difficulty=3",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
+GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZTeamGame}:(MapName="@1@",GameName="Squad Assault",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}{TeamArena.TAGame}:(MapName="@1@",GameName="Team Arena",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 GameProfiles+=@Loop {@CCMaps@}{Cruzade.CRZCellCapture}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 GameProfiles+=@Loop {@ADMaps@}{Cruzade.CRZAreaDomination}:(MapName="@1@",GameClass="@2@",Options="?NumPlay=8",Mutators="MutatH0r.CRZMutator_DmgPlume",ExcludedMuts=)
 Map=BL-Artifact
@@ -313,7 +314,7 @@ Mutators*=MutatH0r.CRZMutator_DmgPlume
 
 [DedicatedServer2]
 ; Bloodlust only
-@ServerName=Bloodlust only
+ServerName=Bloodlust only
 @Import=BL-Defaults
 GameProfiles!=
 GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
@@ -322,7 +323,7 @@ Mutators*=MutatH0r.CRZMutator_DmgPlume
 
 [DedicatedServer3]
 ; Instagib only
-@ServerName=Instagib
+ServerName=Instagib
 @Import=BL-Defaults
 GameProfiles!=
 GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
@@ -332,32 +333,33 @@ Mutators*=Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth
 
 [DedicatedServer4]
 ; Votable between Bloodlust and Instagib
-@ServerName=Bloodlust+Instagib
+ServerName=Bloodlust+Instagib
 @Import=BL-Defaults
 GameProfiles!=
-GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Instagib",GameClass="Cruzade.CRZBloodlust",Options="?Difficulty=2",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
 GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Instagib",GameClass="Cruzade.CRZBloodlust",Options="?Difficulty=2",Mutators="Cruzade.CRZMutator_Instagib,Cruzade.CRZMutator_NoStealth",ExcludedMuts="MutatH0r.CRZMutator_DmgPlume")
 Map=BL-Artifact
 Mutators*=MutatH0r.CRZMutator_DmgPlume
 
 [DedicatedServer5]
 ; Votable between SA, CC, AD and TA
-@ServerName=Team Games only (SA, CC, AD, TA)
+ServerName=Team Games only (SA, CC, AD, TA)
 @Import=BL-Default,CC-Defaults
 GameProfiles!=
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZTeamGame",Options=,Mutators=,ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Team Arena",GameClass="TeamArena.TAGame",Options=,Mutators=,ExcludedMuts=)
 GameProfiles+=@Loop {@CCMaps@}:(MapName="@1@",GameClass="Cruzade.CRZCellCapture",Options=,Mutators=,ExcludedMuts=)
 GameProfiles+=@Loop {@ADMaps@}:(MapName="@1@",GameClass="Cruzade.CRZAreaDomination",Options=,Mutators=,ExcludedMuts=)
-GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameName="Team Arena",GameClass="TeamArena.TAGame",Options=,Mutators=,ExcludedMuts=)
-GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZTeamGame",Options=,Mutators=,ExcludedMuts=)
 Map=CC-Twin_Peaks
 Mutators*=MutatH0r.CRZMutator_DmgPlume
 
 [DedicatedServer6]
 ; Noob Friendly: Health+Armor deday, NoobAid
-@ServerName=NoobFriendly BL,SA
+ServerName=NoobFriendly BL,SA
 @Import=BL-Defaults,HealthArmorDecay
 GameProfiles!=
-GameProfiles+=@Loop {@BLMaps@}{Cruzade.CRZTeamGame,Cruzade.CRZBloodlust}:(MapName="@1@",GameClass="@2@",Options=,Mutators=,ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options=,Mutators=,ExcludedMuts=)
+GameProfiles+=@Loop {@BLMaps@}:(MapName="@1@",GameClass="Cruzade.CRZTeamGame",Options=,Mutators=,ExcludedMuts=)
 Map=BL-Foundation
 Difficulty=@skillclass,4
 Mutators*=Cruzade.CRZMutator_NoobAid,MutatH0r.CRZMutator_StimHead,MutatH0r.CRZMutator_DmgPlume
@@ -370,9 +372,9 @@ GoalScore=30
 GoalScoreBL=30
 Mutators*=MutatH0r.CRZMutator_Loadout,MutatH0r.CRZMutator_Roq3t,MutatH0r.CRZMutator_DmgPlume,CRZMutator_NoStealth
 Loadout=8A
-Map=BL-Cube
-GameProfiles:=
-GameProfiles+=@Loop {BL-Cube,BL-Artifact,BL-Ganesha}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options="?Roq3tPreset=RocketInsta?Loadout=8A",Mutators=,ExcludedMuts=)
+Map=BL-LongestYard
+GameProfiles!=
+GameProfiles+=@Loop {BL-LongestYard,BL-FusionKKore,BL-Dedale,BL-Cube,BL-Artifact,BL-Ganesha}:(MapName="@1@",GameClass="Cruzade.CRZBloodlust",Options="?Roq3tPreset=RocketInsta?Loadout=8A",Mutators=,ExcludedMuts=)
 Roq3tPreset=RocketInsta
 UDKMutatH0r.ini\RocketInsta Roq3tConfig\Speed=1800
 UDKMutatH0r.ini\RocketInsta Roq3tConfig\Knockback=85000
