updated to ToxikkServerLauncher 2.30, which is compatible with TOXIKK 1.0.2

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -157,6 +157,8 @@ AdminPassword=
 ;QueryPort=27015
 GamePort=@port,7777,2
 QueryPort=@port,27015,1
+; uncomment the next line if clients get stuck on the "connecting..." screen when they try to connect to your server
+;@SteamSockets=false
 Difficulty=@skillclass,6
 MinSkillClass=
 MaxSkillClass=
@@ -366,8 +368,8 @@ Mutators*=Cruzade.CRZMutator_NoobAid,MutatH0r.CRZMutator_StimHead,MutatH0r.CRZMu
 
 [DedicatedServer7]
 ; Rocket Instagib
-@Import=BL-Defaults
 ServerName=Rocket Instagib
+@Import=BL-Defaults
 GoalScore=30
 GoalScoreBL=30
 Mutators*=MutatH0r.CRZMutator_Loadout,MutatH0r.CRZMutator_Roq3t,MutatH0r.CRZMutator_DmgPlume,CRZMutator_NoStealth
