--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -53,7 +53,7 @@ CustomPlayers=UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\Custom
 WelcomeHeader=UDKMutatH0r.ini\MutatH0r.CRZMutator_Motd\WelcomeHeader
 WelcomeMessage=UDKMutatH0r.ini\MutatH0r.CRZMutator_Motd\WelcomeMessage
 BannedSteamIds=DefaultGame.ini\Cruzade.CRZAccessControl\BannedSteamIds
-GameProfiles=DefaultMapList.ini\Cruzade.CRZVoteManager\GameVoteProfiles
+GameProfiles=DefaultMapList.ini\DefaultGameList CRZGameVoteList\GameVoteProfiles
 
 
 [SteamWorkshop]
@@ -70,32 +70,35 @@ Item=611201059 ;BL-FusionKKore
 Item=683852119 ;BL-Dedale
 Item=622177613 ;BL-Grendelkeep
 Item=609552489 ;BL-Campgrounds
-Item=663763892 ;BL-TheEdge
 Item=609657057 ;BL-Hiata4
 Item=688656187 ;CC-Hiata4_XL
 Item=604040154 ;BL-GermanAlps-v10
 Item=647730220 ;CC-Novus
-Item=655952794 ;CC-FacingWorlds
-Item=728197710 ;BL-Map30Doom (Icon Of Sin)
 Item=739422820 ;BL-AkroneAlpha
 Item=744380978 ;BL-MoovAlpha
-Item=754310974 ;BL-LongestYard
 Item=755189075 ;BL-Eternity
+Item=http://toxikk.beham.biz/workshop/LongestYard.zip ;BL-Defiance_Shell_V1
+Item=http://toxikk.beham.biz/workshop/TheEdge.zip ;BL-Edge
+Item=http://toxikk.beham.biz/workshop/FacingWorlds.zip ;CC-FacingWorlds
+Item=http://toxikk.beham.biz/workshop/Goose.zip ;BL-GooseShell_V1
 Item=http://toxikk.beham.biz/workshop/Defiance.zip ;BL-Defiance
 Item=http://toxikk.beham.biz/workshop/Rankin.zip ;BL-Rankin
 Item=http://toxikk.beham.biz/workshop/Map07Doom.zip ;BL-Map07Doom (Dead Simple)
+Item=http://toxikk.beham.biz/workshop/Map30Doom.zip ;BL-Map32Doom (Icon of Sin)
 Item=http://toxikk.beham.biz/workshop/Map32Doom.zip ;BL-Map32Doom (Grosse Censored)
 Item=http://toxikk.beham.biz/workshop/Salem.zip ;CC-Salem (glitchy when alt-tabbing)
+Item=http://toxikk.beham.biz/workshop/OverdozedPack.zip ;BL-RoomBETA, BL-WohnkuecheBETA, CC-BasicallyBeta4, CC-KlinikaBeta1
+
 
 ; Weapons
 Item=601819301 ;Railgun (piercing Stingray beam)
-Item=698385286 ;Calico M950 Pistol (replaces Violator)
-Item=702872610 ;KF2 Double Barrel Shotgun (aka Boomstick)
-Item=728142135 ;Quake 3 Weapon Overhaul
-Item=726797553 ;KF2 S&W 500
+Item=http://toxikk.beham.biz/workshop/KF2Boomstick.zip ;KF2 Double Barrel Shotgun (aka Boomstick)
+Item=http://toxikk.beham.biz/workshop/Q3Weapons.zip ;Quake 3 Weapon Overhaul
 Item=http://toxikk.beham.biz/workshop/NewDoomWeapons.zip
 Item=http://toxikk.beham.biz/workshop/Doom3RL.zip
-Item=http://toxikk.beham.biz/workshop/SWCrossbow.zip
+;Item=http://toxikk.beham.biz/workshop/CalicoTest.zip ;Calico M950 Pistol (replaces Violator)
+;Item=http://toxikk.beham.biz/workshop/SWFiveHundred.zip ;KF2 S&W 500
+;Item=http://toxikk.beham.biz/workshop/SWCrossbow.zip
 
 ; Game Types
 Item=667216025 ;TeamArena
@@ -103,22 +106,20 @@ Item=667216025 ;TeamArena
 ; Tools
 Item=672299305 ;Server Utils 1 (QuickVoting, ServerIdle, AdminPlus)
 Item=603855831 ;MutatH0r pack
-Item=713969489 ;Custom Music
-Item=621419323 ;Toxikk Ads
 
 ; Player Models
-Item=626730010 ;Custom Player Models
-Item=628115148 ;Republic Commandos (Star Wars)
-Item=632879016 ;Tron Anon
-Item=634232289 ;Duke Nukem Model
-Item=639972958 ;Homer
-Item=697236573 ;Doom3Marines
-Item=697333354 ;Postal Dude
-Item=697456338 ;Venom
-Item=721300253 ;Gretel MK II (TS2)
-Item=729789993 ;Dat Boi (Kermit)
-Item=739061958 ;2000 Spidey Mega Pack
-Item=739107145 ;UT2004 Cathode
+Item=http://toxikk.beham.biz/workshop/CustomPlayers.zip ;Custom Player Models
+Item=http://toxikk.beham.biz/workshop/628115148.zip ;Republic Commandos (Star Wars)
+Item=http://toxikk.beham.biz/workshop/632879016.zip ;Tron Anon
+Item=http://toxikk.beham.biz/workshop/634232289.zip ;Duke Nukem Model
+Item=http://toxikk.beham.biz/workshop/639972958.zip ;Homer
+Item=http://toxikk.beham.biz/workshop/697236573.zip ;Doom3Marines
+Item=http://toxikk.beham.biz/workshop/697333354.zip ;Postal Dude
+Item=http://toxikk.beham.biz/workshop/697456338.zip ;Venom
+Item=http://toxikk.beham.biz/workshop/721300253.zip ;Gretel MK II (TS2)
+Item=http://toxikk.beham.biz/workshop/729789993.zip ;Dat Boi (Kermit)
+Item=http://toxikk.beham.biz/workshop/739061958.zip ;2000 Spidey Mega Pack
+Item=http://toxikk.beham.biz/workshop/739107145.zip ;UT2004 Cathode
 Item=http://toxikk.beham.biz/workshop/Q3Doomguys.zip
 Item=http://toxikk.beham.biz/workshop/Q3Pack.zip
 Item=http://toxikk.beham.biz/workshop/WaspSoldiers.zip
@@ -126,17 +127,20 @@ Item=http://toxikk.beham.biz/workshop/PredatorPM.zip
 Item=http://toxikk.beham.biz/workshop/XenoPack.zip
 Item=http://toxikk.beham.biz/workshop/KFNightfall.zip
 Item=http://toxikk.beham.biz/workshop/HoloGirls.zip
+Item=http://toxikk.beham.biz/workshop/Cate.zip
+Item=http://toxikk.beham.biz/workshop/TH4Jango.zip
+Item=http://toxikk.beham.biz/workshop/purplemonkey.zip
 
 
 [MapList]
 ; Don't put any maps in this list which you don't have installed... when users vote for a missing map, the server will crash!
 @BLMaps_Stock@=BL-Foundation,BL-Artifact,BL-Ganesha,BL-Dekk,AD-Castello,BL-Cube
 @BLMaps@=@BLMaps_Stock@,BL-FusionKKore,BL-Dedale,BL-LongestYard,BL-Grendelkeep,BL-Eternity,BL-AkroneAlpha,BL-MoovAlpha,BL-Campgrounds,BL-Edge,BL-Hiata4,BL-GermanAlps-v10
-@BLMaps@=@BLMaps@,BL-MAP07Doom,BL-MAP30Doom,BL-MAP32DoomCensored
-@BLMaps@=@BLMaps@,BL-Rankin_V1,BL-Defiance_Shell_V1
+@BLMaps@=@BLMaps@,BL-MAP07Doom,BL-MAP30Doom,BL-MAP32DoomCensored,BL-RoomBETA,BL-WohnkuecheBETA
+@BLMaps@=@BLMaps@,GooseShell_V1,BL-Defiance_Shell_V1,BL-Rankin_V1
 
 @CCMaps_Stock@=CC-Twin_Peaks,CC-Foundation_XL,CC-Artifact_XL,CC-Citadel,CC-Ehrgeiz
-@CCMaps@=@CCMaps_Stock@,CC-Novus,CC-Hiata4_XL,CC-FacingWorlds,CC-Sprinta,CC-Bloxeh,CC-wootabolous
+@CCMaps@=@CCMaps_Stock@,CC-Novus,CC-Hiata4_XL,CC-FacingWorlds,CC-Sprinta,CC-Bloxeh,CC-wootabolous,CC-BasicallyBeta4,CC-KlinikaBeta1
 ;@CCMaps@=@CCMaps@,CC-Salem_beta1a
 
 @ADMaps_Stock@=AD-Castello,BL-Foundation,BL-Artifact,CC-Artifact_XL,BL-Dekk,BL-Ganesha,CC-Twin_Peaks
@@ -229,29 +233,29 @@ UDKMutatH0r.ini\MutatH0r.CRZMutator_RegenDecay\ArmorDecayLimit=100
 [PlayerModels]
 ; add "@Import=PlayerModels" to your [DedicatedServerX] config if you want to enable custom player models
 ; Players will auto-download all the models that are listed below, even if no player on the server is using them
-@Copy=@WorkshopDir@\626730010\UDKCustomPlayers.ini
+@Copy=@WorkshopDir@\PlayerModels\UDKCustomPlayers.ini
 Mutators*=CustomPlayers.CRZMutator_CustomPlayers
 UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bShowReminder=false
 UDKCustomPlayers.ini\CustomPlayers.CRZMutator_CustomPlayers\bDisableVoices=false
 CustomPlayers!=
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_Drayos",DownloadURL="")
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_Exocom",DownloadURL="")
-CustomPlayers+=(PlayerClass="HomerSimpson.PI_HomerSimpson",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=639972958")
-CustomPlayers+=(PlayerClass="TronAnon.PI_TronAnon",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=632879016")
+CustomPlayers+=(PlayerClass="HomerSimpson.PI_HomerSimpson",DownloadURL="")
+CustomPlayers+=(PlayerClass="TronAnon.PI_TronAnon",DownloadURL="")
 CustomPlayers+=(PlayerClass="PredatorPM.PI_Predator",DownloadURL="")
 CustomPlayers+=(PlayerClass="XenoPack.PI_XenomorphCM",DownloadURL="")
-CustomPlayers+=(PlayerClass="PDudeRedux.PI_PostalRedux",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697333354")
+CustomPlayers+=(PlayerClass="PDudeRedux.PI_PostalRedux",DownloadURL="")
 CustomPlayers+=(PlayerClass="WaspSoldiers.PI_WaspSoldier",DownloadURL="")
-CustomPlayers+=(PlayerClass="DatBoi.PI_DatBoi",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=729789993")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Beach",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Duck",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Merica",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Skull",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Tie",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Toxikk",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_XMas",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
-CustomPlayers+=(PlayerClass="DukeNukem.PI_DankNukem",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=634232289")
+CustomPlayers+=(PlayerClass="DatBoi.PI_DatBoi",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Beach",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Duck",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Merica",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Skull",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Tie",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_Toxikk",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DukeNukem_XMas",DownloadURL="")
+CustomPlayers+=(PlayerClass="DukeNukem.PI_DankNukem",DownloadURL="")
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_Bones",DownloadURL="")
 CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3Doomguy",DownloadURL="")
 CustomPlayers+=(PlayerClass="Q3Doomguys.PI_Q3DoomStatue",DownloadURL="")
@@ -263,36 +267,39 @@ CustomPlayers+=(PlayerClass="Q3Pack.PI_Ranger",DownloadURL="")
 CustomPlayers+=(PlayerClass="Q3Pack.PI_Sarge",DownloadURL="")
 CustomPlayers+=(PlayerClass="Q3Pack.PI_Crash",DownloadURL="")
 CustomPlayers+=(PlayerClass="Q3Pack.PI_Hunter",DownloadURL="")
-CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697236573")
-CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_M",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697236573")
-CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_MSarge",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697236573")
-CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_S",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697236573")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_M",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_MSarge",DownloadURL="")
+CustomPlayers+=(PlayerClass="Doom3Guys.PI_D3Doomguy_S",DownloadURL="")
 CustomPlayers+=(PlayerClass="KFNightfall.PI_NFFoster",DownloadURL="")
 CustomPlayers+=(PlayerClass="KFNightfall.PI_NFBombsquad",DownloadURL="")
 CustomPlayers+=(PlayerClass="KFNightfall.PI_NFNoble",DownloadURL="")
 CustomPlayers+=(PlayerClass="KFNightfall.PI_NFMutant",DownloadURL="")
 CustomPlayers+=(PlayerClass="KFNightfall.PI_NFMagma",DownloadURL="")
-CustomPlayers+=(PlayerClass="TS2Gretel.PI_Gretel",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=721300253") 
+CustomPlayers+=(PlayerClass="TS2Gretel.PI_Gretel",DownloadURL="") 
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_HK47Char",DownloadURL="")
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_DAR",DownloadURL="")
 CustomPlayers+=(PlayerClass="CustomPlayers.PI_DARGreen",DownloadURL="")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_White",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_ARC",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_07Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_38Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_40Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_62Char",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=628115148")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_Venom",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomCyan",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomGreen",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomIndigo",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomOrange",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPink",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
-CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPurple",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=697456338")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_White",DownloadURL="")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_ARC",DownloadURL="")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_07Char",DownloadURL="")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_38Char",DownloadURL="")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_40Char",DownloadURL="")
+CustomPlayers+=(PlayerClass="RepublicCommandos.PI_RC_62Char",DownloadURL="")
+CustomPlayers+=(PlayerClass="TH4Jango.PI_Jango",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_Venom",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomCyan",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomGreen",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomIndigo",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomOrange",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPink",DownloadURL="")
+CustomPlayers+=(PlayerClass="VenomPlayer.PI_VenomPurple",DownloadURL="")
 CustomPlayers+=(PlayerClass="HoloGirls.PI_HoloGreen",DownloadURL="")
 CustomPlayers+=(PlayerClass="HoloGirls.PI_HoloBlue",DownloadURL="")
-CustomPlayers+=(PlayerClass="RetroSpidey.PI_Spidey",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=739061958")
-CustomPlayers+=(PlayerClass="UTCathode.PI_Cathode",DownloadURL="http://steamcommunity.com/sharedfiles/filedetails/?id=739107145")
+CustomPlayers+=(PlayerClass="RetroSpidey.PI_Spidey",DownloadURL="")
+CustomPlayers+=(PlayerClass="UTCathode.PI_Cathode",DownloadURL="")
+CustomPlayers+=(PlayerClass="BonziBuddy.PI_Bonzi",DownloadURL="")
+CustomPlayers+=(PlayerClass="CateArcher.PI_Cate",DownloadURL="")
 
 
 ;===============================================================================================
