added missing System.Net.Http.dll

--- a/ToxikkServerLauncher/ServerConfig.ini
+++ b/ToxikkServerLauncher/ServerConfig.ini
@@ -161,8 +161,8 @@ AdminPassword=
 ;QueryPort=27015
 GamePort=@port,7777,2
 QueryPort=@port,27015,1
-; uncomment the next line if clients get stuck on the "connecting..." screen when they try to connect to your server
-;@SteamSockets=false
+; uncomment the next line if you want to use steam sockets (they are supposed to help with NAT-traversal, but can cause other problems)
+;@SteamSockets=true
 Difficulty=@skillclass,6
 MinSkillClass=
 MaxSkillClass=
